post release readme fix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dependencies = [
   "semantic-version>=2.10.0",
   "requests>=2.30.0"
 ]
-version = "1.0.0"
+version = "1.0.0.post1"
 
 [project.urls]
 Documentation = "https://github.com/Helveg/hatch-node-build?tab=readme-ov-file#hatch-node-build"
